--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "moment": "^2.30.1",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
